<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1D1D27">

        <RelativeLayout
            android:id="@+id/movieDetailsItem_posterAndTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/movieDetailsItem_poster"
                android:layout_width="match_parent"
                android:layout_height="616dp"
                android:layout_centerVertical="true"
                android:background="#1D1D27"
                android:backgroundTint="#1D1D27"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@drawable/ic_movie_black_24dp"
                tools:tint="#FFFFFF"
                android:contentDescription="Movie's Poster" />

            <TextView
                android:id="@+id/movieDetailsItem_title"
                android:layout_width="match_parent"
                android:layout_height="616dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="30dp"
                android:gravity="bottom"
                android:layout_alignStart="@+id/movieDetailsItem_poster"
                android:layout_alignEnd="@+id/movieDetailsItem_poster"
                android:layout_alignBottom="@id/movieDetailsItem_poster"
                android:background="@drawable/movie_title_gradient"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="#FFFFFF"
                tools:text="@string/Title" />
        </RelativeLayout>

        <TableRow
            android:id="@+id/hr0"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_posterAndTitleLayout"
            android:layout_height="1dp"
            android:background="#444" />

        <LinearLayout
            android:id="@+id/movieDetailsItem_ratingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/hr0"
            app:layout_constraintStart_toStartOf="parent">



        <LinearLayout
            android:id="@+id/movieDetailsItem_imdbLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_ratingsLayout"
            app:layout_constraintLeft_toLeftOf="parent">
=======
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="12dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hr0"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/imdb_rating" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

            <TextView
                android:id="@+id/movieDetailsItem_imdbRating"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.181"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="IMDB Rating" />

            <TextView
                android:id="@+id/movieDetailsItem_imdbRatingTitle"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.119"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.002"
                app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_imdbRating"
                tools:text="IMDB" />


    </LinearLayout>

        <LinearLayout
            android:id="@+id/movieDetailsItem_rottenLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/hr0"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/movieDetailsItem_rottenTomatoesScore"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.181"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintVertical_bias="0.0"
                tools:text="RT Score" />

            <TextView
                android:id="@+id/movieDetailsItem_rottenTomatoesScoreTitle"
                android:layout_width="205dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.119"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.002"
                app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_rottenTomatoesScore"
                tools:text="Rotten Tomatoes" />

        </LinearLayout>

        </LinearLayout>

=======
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="12dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_imdbRating"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/imdb_rating_title" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TableRow
            android:id="@+id/hr1"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_ratingsLayout"
            android:layout_height="1dp"
            android:background="#444" />

        <TextView
            android:id="@+id/movieDetailsItem_descriptionTitle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Description Title"
            app:layout_constraintTop_toBottomOf="@id/hr1"/>
=======
            tools:text="@string/description_title" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TextView
            android:id="@+id/movieDetailsItem_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Description"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_descriptionTitle"/>
=======
            tools:text="@string/description" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TableRow
            android:id="@+id/hr2"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_height="1dp"
            android:background="#444"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_description"/>

        <TextView
            android:id="@+id/movieDetailsItem_directorTitle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Director Title"
            app:layout_constraintTop_toBottomOf="@id/hr2"/>
=======
            tools:text="@string/director_title" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TextView
            android:id="@+id/movieDetailsItem_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Director"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_directorTitle"/>
=======
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_directorTitle"
            tools:text="@string/director" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TableRow
            android:id="@+id/hr3"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_height="1dp"
            android:background="#444"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_director"/>

        <TextView
            android:id="@+id/movieDetailsItem_lengthTitle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Movie Length Title"
            app:layout_constraintTop_toBottomOf="@id/hr3"/>
=======
            tools:text="@string/movie_length_title" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TextView
            android:id="@+id/movieDetailsItem_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Movie Length"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_lengthTitle"/>
=======
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_lengthTitle"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/movie_length" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TableRow
            android:id="@+id/hr4"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_height="1dp"
            android:background="#444"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_length"/>

        <TextView
            android:id="@+id/movieDetailsItem_releaseDateTitle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Release Date Title"
            app:layout_constraintTop_toBottomOf="@id/hr4"/>
=======
            tools:text="@string/release_date_title" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

        <TextView
            android:id="@+id/movieDetailsItem_releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintVertical_bias="0.0"
            android:paddingVertical="12dp"
            android:paddingHorizontal="18dp"
<<<<<<< HEAD
            tools:text="Release Date"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_releaseDateTitle"/>
=======
            app:layout_constraintTop_toBottomOf="@id/movieDetailsItem_releaseDateTitle"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/release_date" />
>>>>>>> 5db7436235db69f15ad7134ed2d095172586ef01

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
